re PR c++/22603 (ICE in pop_binding, at cp/name-lookup.c:380)

cp:
	PR c++/22603
	Backport part of
	2005-03-14  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
	* name-lookup.c (pushtag): Skip template parameter scope when
	scope is ts_global.  Don't push tag into template parameter
	scope.
testsuite:
	PR c++/22603
	* g++.dg/parse/template18.C: New.

From-SVN: r105410