gcc/cp/name-lookup.c
@@ -4582,10 +4582,9 @@ pushtag (tree name, tree type, tag_scope scope)
 	 /* Neither are the scopes used to hold template parameters
 	    for an explicit specialization.  For an ordinary template
 	    declaration, these scopes are not scopes from the point of
-	    view of the language -- but we need a place to stash
-	    things that will go in the containing namespace when the
-	    template is instantiated.  */
-	 || (b->kind == sk_template_parms && b->explicit_spec_p)
+	    view of the language.  */
+	 || (b->kind == sk_template_parms
+	     && (b->explicit_spec_p || scope == ts_global))
 	 || (b->kind == sk_class
 	     && (scope != ts_current
 		 /* We may be defining a new type in the initializer
@@ -4658,7 +4657,7 @@ pushtag (tree name, tree type, tag_scope scope)
 	      else
 		pushdecl_class_level (decl);
 	    }
-	  else
+	  else if (b->kind != sk_template_parms)
 	    decl = pushdecl_with_scope (decl, b);
 
 	  /* FIXME what if it gets a name from typedef?  */
